add work area mobile

--- a/index.html
+++ b/index.html
@@ -67,5 +67,36 @@
 
       </div>
 
+      <div class="container2">
+          <div class="a">
+            <img src="images/Photopgraphy.jpg" alt="">
+            <p>Photopgraphy</p>
+          </div>
+          <div class="b">
+            <img src="images/UX.jpg" alt="">
+            <p>UX/UI</p>
+          </div>
+          <div class="c">
+            <img src="images/Video.jpg" alt="">
+            <p>Video</p>
+          </div>
+          <div class="d">
+            <img src="images/Photopgraphy.jpg" alt="">
+            <p>Photopgraphy</p>
+          </div>
+          <div class="e">
+            <img src="images/Photopgraphy.jpg" alt="">
+            <p>Photopgraphy</p>
+          </div>
+          <div class="f">
+            <img src="images/Photopgraphy.jpg" alt="">
+            <p>Photopgraphy</p>
+          </div>
+          
+
+      </div>
+
+
+
 </body>
 </html>
