add footer mobile

--- a/index.html
+++ b/index.html
@@ -81,20 +81,40 @@
             <p>Video</p>
           </div>
           <div class="d">
-            <img src="images/Photopgraphy.jpg" alt="">
-            <p>Photopgraphy</p>
+            <img src="images/Illustrations.jpg" alt="">
+            <p>Illustrations</p>
           </div>
           <div class="e">
-            <img src="images/Photopgraphy.jpg" alt="">
-            <p>Photopgraphy</p>
+            <img src="images/Graphic Design.jpg" alt="">
+            <p>Graphic Design</p>
           </div>
           <div class="f">
-            <img src="images/Photopgraphy.jpg" alt="">
-            <p>Photopgraphy</p>
+            <img src="images/Web Desing.jpg" alt="">
+            <p>Web Desing</p>
           </div>
           
 
       </div>
+
+      <footer>
+        <h2>LOGO</h2>
+        <div class="socialfooter">
+          <a href="#" class="fa fa-facebook"></a>
+          <a href="#" class="fa fa-instagram"></a>
+          <a href="#" class="fa fa-linkedin"></a>
+        </div>
+
+        <div class="navcontainer">
+          <nav class="navbarfooter">
+            <ul class="ulfooter">
+              <li><a href="">HOME</a></li>
+              <li><a href="">ABOUT</a></li>
+              <li><a href="">PORTFOLIO</a></li>
+              <li><a href="">CONTACT</a></li>
+            </ul>
+          </nav>
+      </div>
+      </footer>
 
 
 
