--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   
 
     <!-- flexbox -->
-    <header>
+    <header class="head">
         <div class="container1">
 
           <h2 class="logo">LOGO</h2>
