finish porfolio desktop and mobile

--- a/portfolio.html
+++ b/portfolio.html
@@ -45,6 +45,41 @@
         <script src="script.js"></script>
     </header>
 
+    <section>
+      <div class="work">
+        <h1>Portfolio</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit,</p>
+
+      </div>
+
+      <div class="container2">
+          <div class="a">
+            <img src="images/Photopgraphy.jpg" alt="">
+            <p>Photopgraphy</p>
+          </div>
+          <div class="b">
+            <img src="images/UX.jpg" alt="">
+            <p>UX/UI</p>
+          </div>
+          <div class="c">
+            <img src="images/Video.jpg" alt="">
+            <p>Video</p>
+          </div>
+          <div class="d">
+            <img src="images/Illustrations.jpg" alt="">
+            <p>Illustrations</p>
+          </div>
+          <div class="e">
+            <img src="images/Graphic Design.jpg" alt="">
+            <p>Graphic Design</p>
+          </div>
+          <div class="f">
+            <img src="images/Web Desing.jpg" alt="">
+            <p>Web Desing</p>
+          </div>
+          
+        </section>
+
 
     
 
