fix about page padding desltop and mobile

--- a/about.html
+++ b/about.html
@@ -25,10 +25,10 @@
               <div class="line line-3"></div>
             </div>
               <ul>
-                <li><a href="">HOME</a></li>
-                <li><a href="">ABOUT</a></li>
-                <li><a href="">PORTFOLIO</a></li>
-                <li><a href="">CONTACT</a></li>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="about.html">ABOUT</a></li>
+                <li><a href="portfolio.html">PORTFOLIO</a></li>
+                <li><a href="contact.html">CONTACT</a></li>
               </ul>
           </nav>
           
@@ -56,7 +56,7 @@
             <br>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore pariatur qui sit neque quidem at aperiam dolorum quibusdam corrupti corporis eos nesciunt atque rerum aut, consectetur molestias assumenda repellendus cupiditate. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus nisi quae sit, animi enim, accusantium porro, odio nam itaque perspiciatis ea fugit corrupti commodi incidunt placeat sed accusamus vitae sequi? Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 
-            <a href="landing.html" class="button">CONTACT</a>
+            <a href="contact.html" class="button">CONTACT</a>
 
         </div>
     </section>
@@ -113,10 +113,10 @@
         <div class="navcontainer">
           <nav class="navbarfooter">
             <ul class="ulfooter">
-              <li><a href="">HOME</a></li>
-              <li><a href="">ABOUT</a></li>
-              <li><a href="">PORTFOLIO</a></li>
-              <li><a href="">CONTACT</a></li>
+              <li><a href="index.html">HOME</a></li>
+              <li><a href="about.html">ABOUT</a></li>
+              <li><a href="portfolio.html">PORTFOLIO</a></li>
+              <li><a href="contact.html">CONTACT</a></li>
             </ul>
           </nav>
       </div>
