--- a/contact.html
+++ b/contact.html
@@ -25,10 +25,10 @@
               <div class="line line-3"></div>
             </div>
               <ul>
-                <li><a href="">HOME</a></li>
-                <li><a href="">ABOUT</a></li>
-                <li><a href="">PORTFOLIO</a></li>
-                <li><a href="">CONTACT</a></li>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="about.html">ABOUT</a></li>
+                <li><a href="portfolio.html">PORTFOLIO</a></li>
+                <li><a href="contact.html">CONTACT</a></li>
               </ul>
           </nav>
           
@@ -94,10 +94,10 @@
         <div class="navcontainer">
           <nav class="navbarfooter">
             <ul class="ulfooter">
-              <li><a href="">HOME</a></li>
-              <li><a href="">ABOUT</a></li>
-              <li><a href="">PORTFOLIO</a></li>
-              <li><a href="">CONTACT</a></li>
+              <li><a href="index.html">HOME</a></li>
+              <li><a href="about.html">ABOUT</a></li>
+              <li><a href="portfolio.html">PORTFOLIO</a></li>
+              <li><a href="contact.html">CONTACT</a></li>
             </ul>
           </nav>
       </div>
