--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
               <div class="line line-3"></div>
             </div>
               <ul>
-                <li><a href="">HOME</a></li>
-                <li><a href="">ABOUT</a></li>
-                <li><a href="">PORTFOLIO</a></li>
-                <li><a href="">CONTACT</a></li>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="about.html">ABOUT</a></li>
+                <li><a href="portfolio.html">PORTFOLIO</a></li>
+                <li><a href="contact.html">CONTACT</a></li>
               </ul>
           </nav>
           
@@ -52,7 +52,7 @@
         </div>
 
         <div class="contbutton">
-          <a href="" class="button">ABOUT</a>
+          <a href="about.html" class="button">ABOUT</a>
         </div>
 
       </div>
@@ -119,10 +119,10 @@
         <div class="navcontainer">
           <nav class="navbarfooter">
             <ul class="ulfooter">
-              <li><a href="">HOME</a></li>
-              <li><a href="">ABOUT</a></li>
-              <li><a href="">PORTFOLIO</a></li>
-              <li><a href="">CONTACT</a></li>
+              <li><a href="index.html">HOME</a></li>
+              <li><a href="about.html">ABOUT</a></li>
+              <li><a href="portfolio.html">PORTFOLIO</a></li>
+              <li><a href="contact.html">CONTACT</a></li>
             </ul>
           </nav>
       </div>
